test/fixtures/themes/001-deprecations/invalid/post.hbs
{{content words="0"}}
{{#if post.author.image}}
    {{post.author.image}}
{{/if}}

{{#if post.author.cover}}
    {{post.author.cover}}
{{/if}}

{{#if post.tags.[3].image}}
    {{post.tags.[3].image}}
{{/if}}
{{#post}}
    {{meta_description}}
    {{#if image}}
        {{image}}
    {{/if}}

    {{#if author.image}}
        {{author.image}}
    {{/if}}

    {{#if author.cover}}
        {{author.cover}}
    {{/if}}

    {{#if tags.[5].image}}
        {{tags.[5].image}}
    {{/if}}
{{/post}}
